--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "protractor conf.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "selenium-webdriver": "4.0.0-alpha.4"
+  }
 }
